@@ -189,15 +189,10 @@ class Smarty_Internal_Compile_Include extends Smarty_Internal_CompileBase {
             $_has_vars = false;
         }
         if ($has_compiled_template && !($compiler->template->caching && ($compiler->tag_nocache || $compiler->nocache))) {
+            $_hash = self::$merged_templates_func[$tpl_name]['nocache_hash'];
             $_output = "<?php /*  Call merged included template \"" . $tpl_name . "\" */\n";
-            $_output .= "\$_template = new {$compiler->smarty->template_class}($include_file, \$_smarty_tpl->smarty, \$_smarty_tpl, $_cache_id, $_compile_id, $_caching, $_cache_lifetime);\n";
-            //            $_output .= "\$_template = \$_smarty_tpl->smarty->createTemplate ($include_file, \$_smarty_tpl, $_cache_id, $_compile_id,false); \$_template->caching = $_caching;";
-            $hash = self::$merged_templates_func[$tpl_name]['nocache_hash'];
-            $_output .= "\$_template->properties['nocache_hash']  = '{$hash}';\n";
-            if ($_has_vars) {
-                $_output .= "\$_template->assign($_vars);\n";
-            }
-            $_output .= "\$_tpl_stack[] = \$_smarty_tpl; \$_smarty_tpl = \$_template;\n";
+            $_output .= "\$_tpl_stack[] = \$_smarty_tpl;\n";
+            $_output .= " \$_smarty_tpl = \$_smarty_tpl->setupInlineSubTemplate($include_file, $_cache_id, $_compile_id, $_caching, $_cache_lifetime, $_vars, $_parent_scope, '$_hash');\n";
             if (isset($_assign)) {
                 $_output .= 'ob_start(); ';
             }
